--- a/libs/client/static/index.html
+++ b/libs/client/static/index.html
@@ -16,6 +16,9 @@
             type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
         ></script>
+        <script src="https://www.amcharts.com/lib/4/core.js"></script>
+        <script src="https://www.amcharts.com/lib/4/charts.js"></script>
+        <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
         <script
             type="text/javascript"
             src="serverAddr.js"
