--- a/libs/client/static/index.html
+++ b/libs/client/static/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Memthol</title>
+        <link rel="shortcut icon" href="favicon.png" />
         <link rel="stylesheet" href="css/client.css">
         <script
             type="text/javascript"
