--- a/libs/client/static/index.html
+++ b/libs/client/static/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Memthol</title>
         <link rel="shortcut icon" href="static/favicon.png" />
-        <link rel="stylesheet" href="css/client.css">
+        <link rel="stylesheet" href="css/style.css">
         <script
             type="text/javascript"
             src="https://d3js.org/d3.v5.min.js"
