--- a/libs/client/static/index.html
+++ b/libs/client/static/index.html
@@ -14,7 +14,12 @@
         ></script>
     </head>
     <body>
-        <script src="client.js"></script>
+        <meta charset="utf-8">
+        <title>Yew example</title>
+        <script type="module">
+            import init from "./client.js"
+            init()
+        </script>
     </body>
 </html>
 
