cleaned+optimized server build.rs, started cleaning client socket creation

--- a/libs/client/static/index.html
+++ b/libs/client/static/index.html
@@ -8,14 +8,10 @@
         <script src="https://www.amcharts.com/lib/4/core.js"></script>
         <script src="https://www.amcharts.com/lib/4/charts.js"></script>
         <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
-        <script
-            type="text/javascript"
-            src="serverAddr.js"
-        ></script>
     </head>
     <body>
         <meta charset="utf-8">
-        <title>Yew example</title>
+        <title>Memthol</title>
         <script type="module">
             import init from "./client.js"
             init()
