[WIP] moving body rendering to layout module

--- a/libs/client/static/index.html
+++ b/libs/client/static/index.html
@@ -6,7 +6,9 @@
         <link rel="shortcut icon" href="static/favicon.png" />
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
+    <body
+        style = "background: black; color: white; margin: 0"
+    >
         <meta charset="utf-8">
         <title>Memthol</title>
         <script type="module">
