introducing filter generation, many fixes and tweaks to filter rendering

--- a/libs/client/static/index.html
+++ b/libs/client/static/index.html
@@ -4,6 +4,16 @@
         <meta charset="utf-8">
         <title>Memthol</title>
         <link rel="shortcut icon" href="static/favicon.png" />
+
+        <style>
+            * {
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+            }
+            *::-webkit-scrollbar {
+                display: none;
+            }
+        </style>
     </head>
     <body
         style = "background: black; color: white; margin: 0"
