horizontal scrollbars for filter toggles

--- a/libs/client/static/index.html
+++ b/libs/client/static/index.html
@@ -6,11 +6,11 @@
         <link rel="shortcut icon" href="static/favicon.png" />
 
         <style>
-            * {
+            :not(.h_scroll) {
                 -ms-overflow-style: none;
                 scrollbar-width: none;
             }
-            *::-webkit-scrollbar {
+            :not(.h_scroll)::-webkit-scrollbar {
                 display: none;
             }
         </style>
