--- a/libs/client/static/index.html
+++ b/libs/client/static/index.html
@@ -16,7 +16,7 @@
         </style>
     </head>
     <body
-        style = "background: black; color: white; margin: 0"
+        style = "background: #313131; color: white; margin: 0"
     >
         <meta charset="utf-8">
         <title>Memthol</title>
