--- a/rsc/static/index.html
+++ b/rsc/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Memthol</title>
-        <link rel="shortcut icon" href="static/favicon.png" />
+        <link rel="shortcut icon" href="favicon.png" />
 
         <style>
             :not(.h_scroll) {
